Spigot Plugin mit Lobbysystem + Scoreboard für CloudNetV3 + Build

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,4 +11,7 @@ commands:
 Permissions:
   fly.use:
     description: Permissions to use /fly
-  setspawn:
+  Spigotlobby:
+    ss:
+    spawn:
+    stuck:
