--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
           <version>1.15-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.spigotmc</groupId>
+          <artifactId>spigot-api</artifactId>
+          <version>1.19-R0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
       <!--lombok-->
       <dependency>
           <groupId>org.projectlombok</groupId>
@@ -144,6 +150,12 @@
           <artifactId>cloudnet-common</artifactId>
           <version>3.4.5-RELEASE</version>
           <scope>provided</scope>
+      </dependency>
+      <!--Authlib-->
+      <dependency>
+          <groupId>com.mojang</groupId>
+          <artifactId>utils</artifactId>
+          <version>1.5.21</version>
       </dependency>
   </dependencies>
 </project>
